--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Banking System",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "Nikesh Ranjan",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "joi": "^17.11.0",
     "moment": "^2.29.4",
     "mongoose": "^8.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
